Changes to Version 2.1-1

    o Anova() now supports "coxme" objects (produced by coxme() in coxme package) (request of Philipp Sprenger).
    
    o dataEllipse() now throws an error if there are too few colors for the number of groups (fixing bug reported by Ottorino Pantani).

Changes to Version 2.1-0

    o New power family called skewPower has been added that can be used with the Box Cox method with a few negative responses (joint work with Doug Hawkins).  Several functions modified to accomodate two-parameter power families.
    
    o Fixed bug in Anova() for coxph models with clusters (reported by Jesus Humberto Gomez ), due apparently to a change in coxph().

Changes to Version 2.0-26

    o Anova() F-tests for binomial and Poisson GLMs now changes error.estimate="dispersion" to "pearson" as advertized (bug reported by Will Petry).
    
    o Improved behavior of above-plot legends in scatterplot().
    
    o Fixed sp() (bug reported by Cesar Rabak).
    
    o Conforms to new CRAN requirements for package imports.

Changes to Version 2.0-25

    o Fixed df check in linearHypothesis.default() (bug report by Pierre Chausse).

    o Fixed bug when vcov. argument to Anova() is a function (reported by Liviu Andronic).
    
    o Now export .carEnv to avoid problem with update() in Boot() (reported by Alan T. Arnholt).

Changes to Version 2.0-24

    o Fixed broken URLs.

    o Changed handling of .carEnv environment.

    o Moved pbkrtest, quantreg, and mgcv from Suggests: to Imports:.

Changes to Version 2.0-23

    o Modified ScatterplotSmoothers to add an 'offset' to the vertical axis of spread smooths.  This is required in the marginal model plot functions.  

    o Fixed labels on mcPlot with overlay=FALSE

    o Check for 0 residual df and 0 residual deviance (within rounding) in Anova() and linearHypothesis() (problem reported by Jonathan Love).
